# shaperail

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh
.github/scripts/: publish-crates.sh
.github/workflows/: ci.yml  release.yml
agent_docs/: current-milestone.md  hooks-system.md  milestones.md  release.md  resource-format.md
docs/: CNAME  README.md  _config.yml  api-responses.md  api-versioning.md  archetypes.md  auth-and-ownership.md  background-jobs.md  blog-api-example.md  caching.md  cli-reference.md  configuration.md  controllers.md  debugging.md  deployment.md  docker-deployment.md  error-handling.md  events-and-webhooks.md  examples.md  file-storage.md  getting-started.md  graphql.md  grpc.md  guides.md  index.md  install.sh  migrations-and-schema-changes.md  multi-service.md  multi-tenancy.md  observability.md  performance.md  reference.md  resource-guide.md  security.md  testing.md  troubleshooting.md  websockets.md
docs/_data/: navigation.yml
docs/_layouts/: docs.html
docs/assets/css/: site.css
examples/blog-api/: README.md  requests.http
examples/blog-api/resources/: comments.controller.rs  comments.yaml  posts.controller.rs  posts.yaml
examples/enterprise-saas/: .env.example  README.md  docker-compose.yml  requests.http  shaperail.config.yaml
examples/enterprise-saas/migrations/: 0001_create_customers.sql  0002_create_invoices.sql  0003_create_payments.sql  0004_create_audit_logs.sql
examples/enterprise-saas/resources/: customers.controller.rs  customers.yaml  invoices.controller.rs  invoices.yaml  payments.controller.rs  payments.yaml
examples/enterprise-saas/seeds/: customers.yaml
examples/incident-platform/: .env.example  Cargo.toml  README.md  build.rs  docker-compose.yml  requests.http  shaperail.config.yaml
examples/incident-platform/channels/: incidents.channel.yaml
examples/incident-platform/migrations/: 0001_create_services.sql  0002_create_incidents.sql  0003_create_alerts.sql  0004_create_attachments.sql  0005_create_incident_audit_log.sql  0006_create_event_logs.sql
examples/incident-platform/resources/: alerts.controller.rs  alerts.yaml  attachments.yaml  incidents.controller.rs  incidents.yaml  services.controller.rs  services.yaml
examples/incident-platform/scripts/: smoke.sh
examples/incident-platform/seeds/: services.yaml
examples/incident-platform/src/: main.rs  runtime_extensions.rs
examples/multi-service/: README.md
examples/multi-tenant/: .env.example  README.md  requests.http  shaperail.config.yaml
examples/multi-tenant/migrations/: 0001_create_organizations.sql  0002_create_projects.sql  0003_create_tasks.sql
examples/multi-tenant/resources/: organizations.controller.rs  organizations.yaml  projects.controller.rs  projects.yaml  tasks.controller.rs  tasks.yaml
examples/multi-tenant/seeds/: organizations.yaml  projects.yaml
resources/: users.yaml
shaperail-cli/: Cargo.toml  README.md
shaperail-cli/src/: main.rs
shaperail-cli/src/commands/: init.rs  jobs_status.rs  mod.rs  resource.rs  routes.rs
shaperail-cli/tests/: cli_tests.rs
shaperail-codegen/: Cargo.toml  README.md
shaperail-codegen/src/: feature_check.rs  openapi.rs  parser.rs  rust.rs  typescript.rs  validator.rs
shaperail-codegen/tests/snapshots/: snapshot_tests__valid_users.snap
shaperail-core/: Cargo.toml  README.md
shaperail-core/src/: endpoint.rs  lib.rs  resource.rs
shaperail-runtime/: Cargo.toml  README.md
shaperail-runtime/benches/: throughput.rs
shaperail-runtime/src/: lib.rs
shaperail-runtime/src/auth/: api_key.rs  extractor.rs  jwt.rs  rate_limit.rs  rbac.rs
shaperail-runtime/src/db/: filter.rs  (+3 more)
shaperail-runtime/tests/: api_integration.rs  db_integration.rs  handler_tests.rs  multi_db_tests.rs
steel-cli/: Cargo.toml  README.md
steel-cli/src/: main.rs
steel-cli/src/commands/: build.rs  doctor.rs  export.rs  generate.rs  init.rs  jobs_status.rs  migrate.rs  mod.rs  serve.rs  validate.rs
steel-cli/tests/: cli_tests.rs
steel-codegen/: Cargo.toml  README.md
steel-core/: Cargo.toml  README.md
steel-core/src/: endpoint.rs  field_type.rs
steel-runtime/: Cargo.toml  README.md
steel-runtime/src/: lib.rs
steel-runtime/tests/: handler_tests.rs
(+39 files in other folders)
