[package]
name = "steel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "steel"
path = "src/main.rs"

[dependencies]
steel-codegen = { path = "../steel-codegen" }
steel-core = { path = "../steel-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
redis = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = "3"
