[package]
name = "steel-cli"
description = "CLI for SteelAPI — steel init, generate, serve, build, migrate, and more"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "steel"
path = "src/main.rs"

[dependencies]
steel-codegen = { version = "0.2.1", path = "../steel-codegen" }
steel-core = { version = "0.2.1", path = "../steel-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
redis = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = "3"
