[package]
name = "steel-codegen"
description = "YAML parser, validator, and code generator for SteelAPI"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
steel-core = { version = "0.2.1", path = "../steel-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
