[package]
name = "incident-platform"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
build = "build.rs"

[features]
default = []
graphql = ["shaperail-runtime/graphql"]
grpc = ["shaperail-runtime/grpc"]
wasm-plugins = ["shaperail-runtime/wasm-plugins"]

[dependencies]
shaperail-runtime = { path = "../../shaperail-runtime", default-features = false }
shaperail-core = { path = "../../shaperail-core" }
shaperail-codegen = { path = "../../shaperail-codegen" }
actix-web = "4"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[build-dependencies]
dotenvy = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "migrate"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[workspace]
